chap03/k8s/gateway/gateway-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deploy
  namespace: metacoding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway-server
          image: metacoding/gateway:2
          ports:
            - containerPort: 80
