chap03/k8s/gateway/gateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: metacoding
spec:
  type: ClusterIP
  selector:
    app: gateway
  ports:
    - port: 80
      targetPort: 80
